src/css/style.less
body {
	font-family: 		 "Motiva Sans", Sans-serif;
	background-image:    url("../asset/background.jpg");
	background-repeat:   no-repeat;
	background-position: center;
	background-size:     cover;
	min-height:          100vh;
	color:             white;
}

#app-container{
	background: rgba(0, 0, 0, 0.377);
	top: 		0;
	position: 	relative;
	min-height: inherit;
}

nav{
	color:       white;
	margin-top:    10px;
}

.nav-mode{
	font-size:      20px;
	letter-spacing: 1.2px;
	color:        rgb(146, 146, 146);
	text-align: center
}

#root-container {
	padding-top: 10px;
	padding-top: 10px;
}

.footer {
	a {
		margin: 0 10px;
		color:rgb(202, 200, 200);
	}
}

.hr {
	border-top:    1px solid black; // fallback.
	border-top:    1px solid rgba(0, 0, 0, 0.2);
	border:        0;
	margin-bottom: 20px;
	margin-top:    20px;
}

#menu-container{
	margin: 20px 0;
}

#menu-avatar-image{
	width:         75px;
	height:        75px;
	border-radius: 50%;
	position:      relative;
	top:          -15px;
	margin-right:  10px;
	background: rgba(94, 94, 94, 0.664);
}

.menu-button{
	height:    70px;
	font-size: 30px;
	margin:    10px 0;
	span{
		padding-right: 20px;
	}
}

.menu-record{
	display:    block;
	text-align: center;
	color:    white;
	margin:     10px 0;
	span{
		margin: 10px;
	}
}

.menu-setting-button{
	display:       block;
	border-radius: 50px;
	margin:        10px auto;
	padding:       20px
}

.menu-setting-title{
	display:       block;
	color:       white;
	text-align:    center;
	margin-bottom: 10px;

}

.game-round{
	color:   rgb(184, 184, 184);
	font-size: 20px;
}


#game-question{
	height:        50px;
	color:       white;
	font-size:     50px;
	text-align:    center;
	margin-bottom: 40px;
	span {
		margin-right: 15px;
	}
}

.game-button{
	width:         100%;
	height:        100px;
	margin-bottom: 25px;
	font-size:     45px;
}

.game-star-complete {
	color:       rgb(233, 233, 51);
	margin-top:    15px;
	margin-bottom: 15px;
	animation:     fadein 2s;
}

.game-star-incomplete {
	color:       rgb(226, 211, 128);
	margin-top:    15px;
	margin-bottom: 15px;
}

.game-star-wrong {
	color:       rgb(235, 54, 54);
	margin-top:    15px;
	margin-bottom: 15px;
	animation:     fadein 2s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.game-star{
	font-size: 25px;
}

#ad-container{
	width:  320px;
	height: 50px;
	margin: auto;
}

#summary-container{
	margin-top: 20px;
}

#summary-star-container{
	margin-bottom: 25px;
	color:       white;
	span{
		font-size: 20px;
	}
}

.summary-button{
	height:        70px;
	font-size:     25px;
	margin-bottom: 25px;
	span{
		padding-left: 10px;
	}
}

#review-container{
	text-align: center;
	color:      rgb(207, 207, 207);
	table{
		margin-bottom: 15px;
	}
	margin-bottom: 15px;
}

.review-reward{
	text-align:  center;
	margin:      15px 0;
	white-space: nowrap;
}

.review-reward-number{
	font-weight:  bold;
	font-size:    25px;
	margin-right: 10px;
}

.col-center{
	margin: 0 auto;
}

#setting-container{
	margin: 25px 0;
}

#rank-container{
	margin: 25px 0;
}

#contact-container{
	margin: 25px 0;
}

#store-container{
	margin-top: 30px;
}

#store-list{
	max-height: 360px;
	overflow-y: scroll;
	border: rgb(156, 153, 153) 1px solid;
}

.store-avatar-image{
	height:        50px;
	width:         50px;
	background:  rgba(135, 231, 255, 0.336);
	border-radius: 20%;
}

.amazon-ad{
	position: absolute;
	z-index:  9999!important;
	top:      150px;
}

.modal-amazon-overlay {
    position: fixed;
    top:    0;
    left:   0;
    right:  0;
    bottom: 0;
    background-color: rgb(46, 46, 46);
}

.store-item{
	display:    block;
	margin-top: 10px;
}

.adsense-fullview-container{
	height:      90vh;
	width:       100%;
	display:     flex;
	align-items: center;

}

.adsense-fullview{
	align-items: center;
	border:    white 2px solid;
	width:       305px;
	height:      320px;
	margin:      auto;
	background: rgba(101, 101, 156, 0.479);
}

